# ore

./: Cargo.toml
api/src/: consts.rs  error.rs  instruction.rs  sdk.rs
api/src/state/: automation.rs  board.rs  config.rs  lp_pool.rs  miner.rs  mod.rs  round.rs  stake.rs
cli/: Cargo.toml
cli/src/: main.rs
launcher/: Cargo.toml
launcher/docs/: design.md  launch-config.md  launcher-config.md
launcher/docs/sample-configs/: launcher.json  launcher.toml
launcher/launcher-backend/: Cargo.toml
launcher/launcher-backend/src/: actions.rs  config.rs  error.rs  launch.rs  lib.rs  scheduler.rs  service.rs  wallet.rs
launcher/launcher-cli/: Cargo.toml
launcher/launcher-cli/src/: config.rs  launch.rs  main.rs
launcher/mining-api/: Cargo.toml
launcher/mining-api/src/: lib.rs
launcher/mining-program/: Cargo.toml
launcher/mining-program/src/: lib.rs
launcher/program-interface/: Cargo.toml
launcher/program-interface/src/: lib.rs
launcher/rewards-lock/: Cargo.toml
launcher/rewards-lock/src/: instruction.rs  lib.rs  pda.rs  processor.rs  state.rs
launcher/rewards-lock/tests/: pda_consistency.rs
program/src/: automate.rs  bury.rs  buyback.rs  checkpoint.rs  claim_ore.rs  claim_sol.rs  claim_yield.rs  close.rs  compound_yield.rs  deploy.rs  deposit.rs  initialize_lp_pool.rs  lib.rs  liq.rs  new_var.rs  reload_sol.rs  reset.rs  set_admin.rs  withdraw.rs  wrap.rs
