[package]
name = "launcher-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "^2.1"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["time"] }
toml = "0.8"
