[package]
name = "launcher-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
launcher-backend = { path = "../launcher-backend" }
rewards-lock = { path = "../rewards-lock" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "^2.1"
toml = "0.8"
